--- a/css/grid.css
+++ b/css/grid.css
@@ -3,6 +3,9 @@ section
     border: 2px solid green;
     max-width: 100%;
     margin: 0 auto;
+    /* display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around; */
     display: grid;
     grid-gap: 1em;
 }
@@ -11,8 +14,24 @@ article
     padding: 10px;
     background: coral;
     height: 4em;
+    border: 2px solid black;
+    /* width: 40%; */
 }
 
+/* 
+FLEX PRAC
+@media(max-width:720px)
+{
+    section
+    {
+        flex-flow: column wrap;
+        align-items: flex-start;
+    }
+    article
+    {
+        width: 100%;
+    }
+} */
 
 @media(min-width:600px)
 {
