--- a/fcc_portfolio_site/style.css
+++ b/fcc_portfolio_site/style.css
@@ -86,7 +86,7 @@ abbr
 .hero-section
 {
     
-    background: url("https://images.unsplash.com/photo-1554787388-9194e4eb57a3?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1046&q=80");
+    background: url("./portfolio/hero1.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -289,6 +289,7 @@ footer
   .contact-links a
   {
     font-size: 1.1rem;
+    cursor: pointer;
   }
   .contact-links a:hover
   {
